--- a/_Waiter@.service
+++ b/_Waiter@.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Minecraft Server %i
+Description=Minecraft Startup Service %i
 After=network.target
 
 StartLimitIntervalSec=500
@@ -16,7 +16,7 @@ TimeoutSec=0
 Restart=on-failure
 RestartSec=5s
 
-User=root
+User=_Waiter
 
 ProtectSystem=full
 # Read only mapping of /usr /boot and /etc
@@ -28,7 +28,7 @@ Environment="MCMINMEM=512M" "MCMAXMEM=1024M" "SHUTDOWN_DELAY=5" "POST_SHUTDOWN_D
 # Change memory values in environment file
 EnvironmentFile=-/opt/minecraft/%i/server.conf
 
-ExecStart=/usr/bin/screen -dmS mc-%i ${JAVA_PATH} -Xmx${MCMAXMEM} -Xms${MCMINMEM} -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -jar "${JAR_NAME}" nogui
+ExecStart=/usr/bin/screen -dmS mc-%i ./start.sh
 
 ExecReload=/usr/bin/screen -p 0 -S mc-%i -X eval 'stuff \"reload\"\015'
 
